# dictionary

./: .gitignore  Cargo.toml  README.md
database/: Cargo.toml
database/benches/: search.rs
database/migrations/2019-11-19-232041_initial/: down.sql  up.sql
database/migrations/2019-11-24-223854_create_pronunciation_index/: down.sql  up.sql
database/src/: lib.rs  models.rs  schema.rs  search.rs
frontend/: .eslintrc.js  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue
frontend/src/components/: SearchForm.vue  Sidebar.vue  SingleDictEntries.vue  WordEntries.vue  WordEntryPreview.vue
parser/: Cargo.toml
parser/src/: cedict_parser.rs  main.rs  types.rs
parser/src/scripts/: create_temp.sql  move_temp_data.sql
web/: Cargo.toml
web/src/: controller.rs  error.rs  main.rs
