[package]
name = "database"
version = "0.1.0"
authors = ["TheImaginaryOne <johnathanleung@hotmail.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["sqlite", "r2d2"] }

dotenv = "0.15.0"