[package]
name = "dictionary"
version = "0.1.0"
authors = ["TheImaginaryOne <johnathanleung@hotmail.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0"
structopt = "0.3"
dotenv = "0.15.0" # should sync with database crate

[dependencies.database]
path = "../database"
