[package]
name = "web"
version = "0.1.0"
authors = ["TheImaginaryOne <johnathanleung@hotmail.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0-alpha.2"
serde = { version = "1.0", features = ["derive"] }

[dependencies.database]
path = "../database"